--- a/.github/workflows/github_pages_deploy.yml
+++ b/.github/workflows/github_pages_deploy.yml
@@ -1,33 +1,35 @@
-name: GitHub Pages deploy
+name: GitHub Pages Deploy
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: "20.x"
+          node-version: 'lts/*'
 
       - name: Install pnpm
         run: npm install -g pnpm
 
-      - name: Installing my packages
+      - name: Install dependencies
         run: pnpm install
 
-      - name: Build my App
+      - name: Build project
         run: pnpm run build && touch ./out/.nojekyll
 
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: out # The folder the action should deploy.
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: out
